Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92104

Quick3D QuickBall example crashing on dev

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.1
    • 6.1
    • Quick: 3D
    • None
    • 1
    • 19fce7fbb9e898fb462d3619763346efcdc6d674
    • Qt Quick 3D - 2021 Week 11/12

    Description

      Testing on qt5 dev branch 7d2e13da10299baf29622b0c975f6263ec60baec

      When running Quick3D QuickBall example and ball hits a cube, it calls targetNode.destroy() and that crashes:

      1 QQuick3DViewport::internalPick Qt6Quick3D 0x7ff99a27bfa1
      2 QCoreApplication::notify Qt6Core 0x7ff95f1a5877
      3 QCoreApplication::notifyInternal2 Qt6Core 0x7ff95f1a5944
      4 QQuickDeliveryAgentPrivate::sendHoverEvent Qt6Quick 0x7ff96ab7dbbc
      5 QQuickDeliveryAgentPrivate::deliverHoverEvent Qt6Quick 0x7ff96ab74e7c
      6 QQuickDeliveryAgentPrivate::deliverHoverEvent Qt6Quick 0x7ff96ab74c49
      7 QQuickDeliveryAgentPrivate::flushFrameSynchronousEvents Qt6Quick 0x7ff96ab79b7a
      8 QQuickOpenGLUtils::resetOpenGLState Qt6Quick 0x7ff96abe1341
      9 QQuickOpenGLUtils::resetOpenGLState Qt6Quick 0x7ff96abe08fc
      10 QQuickWindow::event Qt6Quick 0x7ff96aae3b24
      11 QCoreApplication::notify Qt6Core 0x7ff95f1a5877
      12 QCoreApplication::notifyInternal2 Qt6Core 0x7ff95f1a5944
      13 QPlatformWindow::deliverUpdateRequest Qt6Gui 0x7ff95c0bebc4
      14 QPlatformWindow::windowEvent Qt6Gui 0x7ff95c0bfd18
      15 QGuiApplication::notify Qt6Gui 0x7ff95c09ba86
      16 QCoreApplication::notifyInternal2 Qt6Core 0x7ff95f1a5944
      17 QEventDispatcherWin32Private::sendTimerEvent Qt6Core 0x7ff95f2e0c7b
      18 QEventDispatcherWin32::event Qt6Core 0x7ff95f2de4f2
      19 QCoreApplication::notify Qt6Core 0x7ff95f1a5877
      20 QCoreApplication::notifyInternal2 Qt6Core 0x7ff95f1a5944
      ... <More>

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kagro Kaj Grönholm
            kagro Kaj Grönholm
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes