Fix crash in picking when node is destroyed

Pick-to: 6.1
Task-number: QTBUG-92104
Change-Id: Ia82b810b369722c6c6bc4c8f6ed05fd6bf935839
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>